[gd_scene load_steps=21 format=2]

[ext_resource path="res://Resources/fonts/poco/Poco.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Network/NetworkSetup.gd" type="Script" id=2]
[ext_resource path="res://Resources/textures/backgrounds/stage1sky.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://MainMenu/JoinScreen.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1020, 1280 )

[sub_resource type="DynamicFont" id=2]
size = 47
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1020, 1280 )

[sub_resource type="DynamicFont" id=4]
size = 27
extra_spacing_bottom = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_bottom = 16
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 33
extra_spacing_top = -12
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 35
extra_spacing_top = -16
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 35
use_mipmaps = true
extra_spacing_top = -9
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 50
extra_spacing_top = -19
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 27
extra_spacing_top = -8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0941176, 0.596078, 0.0784314, 1 )
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0941176, 0.596078, 0.0784314, 1 )
corner_detail = 6

[sub_resource type="DynamicFont" id=9]
size = 35
extra_spacing_top = -13
extra_spacing_char = -1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
extra_spacing_bottom = 9
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 36
extra_spacing_top = -11
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16

[node name="Lobby" type="Node2D"]
script = ExtResource( 2 )

[node name="MainCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="background" type="PanelContainer" parent="."]
show_behind_parent = true
margin_right = 800.0
margin_bottom = 1024.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="Label" parent="background"]
margin_top = 483.0
margin_right = 800.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 2 )
text = "Loading..."
align = 1

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="PanelContainer" parent="MainMenu"]
show_behind_parent = true
margin_right = 800.0
margin_bottom = 1024.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MPLobby" type="Control" parent="MainMenu"]
visible = false
margin_right = 800.0
margin_bottom = 1024.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MainMenu/MPLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 363.0
margin_right = 33.0
margin_bottom = 414.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinLobby" type="Control" parent="MainMenu/MPLobby"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ConnectButton" type="Button" parent="MainMenu/MPLobby/JoinLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 220.0
margin_top = 548.0
margin_right = 540.0
margin_bottom = 618.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Enter Server Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="MainMenu/MPLobby/JoinLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 292.0
margin_top = 644.0
margin_right = 475.0
margin_bottom = 692.0
custom_fonts/font = SubResource( 11 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPInput" type="LineEdit" parent="MainMenu/MPLobby/JoinLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 132.0
margin_top = 364.0
margin_right = 628.0
margin_bottom = 425.0
grow_vertical = 0
custom_fonts/font = SubResource( 5 )
align = 1
placeholder_text = "IP Address..."
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Client_Username" type="LineEdit" parent="MainMenu/MPLobby/JoinLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 132.0
margin_top = 444.0
margin_right = 628.0
margin_bottom = 508.0
custom_fonts/font = SubResource( 12 )
align = 1
max_length = 16
placeholder_text = "Username..."
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="MainMenu/MPLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -120.0
margin_right = 166.0
margin_bottom = -35.0
custom_fonts/font = SubResource( 15 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostLobby" type="Control" parent="MainMenu/MPLobby"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostGameButton" type="Button" parent="MainMenu/MPLobby/HostLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.5
margin_top = -41.5
margin_right = 247.5
margin_bottom = 41.5
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Host Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultPort" type="Label" parent="MainMenu/MPLobby/HostLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 42.0
margin_right = 113.0
margin_bottom = 82.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.0941176, 0.596078, 0.0784314, 1 )
custom_fonts/font = SubResource( 8 )
text = "Default Port: 6969"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameInput" type="LineEdit" parent="MainMenu/MPLobby/HostLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 88.0
margin_right = 120.0
margin_bottom = 128.0
grow_horizontal = 2
custom_styles/focus = SubResource( 10 )
max_length = 16
placeholder_text = "Username..."
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateServer" type="Button" parent="MainMenu/MPLobby/HostLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 168.0
margin_right = 64.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 9 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="MainMenu/MPLobby"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_right = 166.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 15 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="Control" parent="MainMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="MainMenu/TitleScreen"]
margin_left = 440.0
margin_top = 512.0
margin_right = 752.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 7 )
disabled = true
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderBoardButton" type="Button" parent="MainMenu/TitleScreen"]
margin_left = 272.0
margin_top = 624.0
margin_right = 532.0
margin_bottom = 694.0
custom_fonts/font = SubResource( 7 )
text = "Leaderboards"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComingSoon!" type="Label" parent="MainMenu/TitleScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 420.0
margin_top = 460.0
margin_right = 732.0
margin_bottom = 497.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Coming Soon!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoloButton" type="Button" parent="MainMenu/TitleScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 52.0
margin_top = 497.0
margin_right = 364.0
margin_bottom = 574.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="host" from="MainMenu" to="." method="_on_MainMenu_host"]
[connection signal="join" from="MainMenu" to="." method="_on_MainMenu_join"]
[connection signal="start_singleplayer" from="MainMenu" to="." method="_on_MainMenu_start_singleplayer"]
[connection signal="netInfoFilled" from="MainMenu/MPLobby" to="MainMenu" method="_on_JoinScreen_netInfoFilled"]
[connection signal="pressed" from="MainMenu/MPLobby/BackButton" to="MainMenu" method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainMenu/MPLobby/BackButton" to="MainMenu/MPLobby" method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainMenu/MPLobby/JoinLobby/ConnectButton" to="MainMenu" method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="MainMenu/MPLobby/JoinLobby/ResetButton" to="MainMenu" method="_on_ResetButton_pressed"]
[connection signal="text_entered" from="MainMenu/MPLobby/JoinLobby/IPInput" to="MainMenu/MPLobby" method="_on_IPInput_text_entered"]
[connection signal="text_entered" from="MainMenu/MPLobby/JoinLobby/Client_Username" to="MainMenu" method="_on_Client_Username_text_entered"]
[connection signal="pressed" from="MainMenu/MPLobby/Join" to="MainMenu/MPLobby" method="_on_Join_pressed"]
[connection signal="pressed" from="MainMenu/MPLobby/HostLobby/HostGameButton" to="MainMenu" method="_on_HostGameButton_pressed"]
[connection signal="text_entered" from="MainMenu/MPLobby/HostLobby/UsernameInput" to="MainMenu" method="_on_UsernameInput_text_entered"]
[connection signal="pressed" from="MainMenu/MPLobby/HostLobby/CreateServer" to="MainMenu" method="_on_CreateServer_pressed"]
[connection signal="pressed" from="MainMenu/MPLobby/Host" to="MainMenu/MPLobby" method="_on_Host_pressed"]
[connection signal="pressed" from="MainMenu/TitleScreen/JoinButton" to="MainMenu" method="_on_JoinButton_pressed"]
[connection signal="pressed" from="MainMenu/TitleScreen/SoloButton" to="MainMenu" method="_on_SoloButton_pressed"]
